--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
-sudo: false
 node_js:
-  - 10
-  - 9
-  - 8
-  - 7
-  - 6
-install:
-  - npm install && cd ..
+  - "10"
+before_script:
+  - npm install
+script:
+  - node index.js
+  - npm test
